[package]
name = "tinyssh"
description = "SSH 2.0 Client"
version = "1.0.0"
edition = "2021"
authors = [ "Nathan ROYER <nathan.royer.pro@gmail.com>" ]
license = "MIT"
keywords = [ "ssh" ]
repository = "https://github.com/NathanRoyer/tinyssh"

[lib]
path = "lib.rs"

[dependencies]
x25519-dalek = "1.2.0"
ed25519-dalek = "1.0.1"
rand_core = { version = "0.5", default-features = false, features = ["getrandom"] }
ring = "0.16.20"
aes = "0.8.3"
ctr = "0.9.2"
