[package]
name = "coolssh"
description = "SSH 2.0 Client"
version = "1.0.2"
edition = "2021"
authors = [ "Nathan ROYER <nathan.royer.pro@gmail.com>" ]
license = "MIT"
keywords = [ "ssh" ]
repository = "https://github.com/NathanRoyer/coolssh"

[lib]

[dependencies]
log = "0.4"
x25519-dalek = "1.2.0"
ed25519-dalek = "1.0.1"
rand_core = { version = "0.5", default-features = false, features = ["getrandom"] }
sha2 = "0.10.7"
aes = "0.8.3"
ctr = "0.9.2"
base64 = { version = "0.21.2", optional = true }

[features]
default = [ "dump" ]
dump = [ "base64" ]
